static/themes structure and greenmat commandline theme add

--- a/src/static/clippy/tutor.template.html
+++ b/src/static/clippy/tutor.template.html
@@ -1,10 +1,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../newtab.css">
-        <link rel="stylesheet" href="../content.css">
-        <link rel="stylesheet" href="../content-dark.css">
-        <link rel="stylesheet" href="../hint.css">
+        <link rel="stylesheet" href="../themes/default/newtab.css">
+        <link rel="stylesheet" href="../themes/default/content.css">
+        <link rel="stylesheet" href="../themes/default/hint.css">
+        <link rel="stylesheet" href="../themes/dark/content.css">
         <link rel="shortcut icon" href="../logo/Tridactyl_64px.png">
     </head>
     <title>Tridactyl Tutorial</title>
