--- a/src/static/commandline.html
+++ b/src/static/commandline.html
@@ -2,8 +2,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="cleanslate.css">
-        <link rel="stylesheet" href="commandline.css">
-        <link rel="stylesheet" href="commandline-dark.css">
+        <link rel="stylesheet" href="themes/default/commandline.css">
+        <link rel="stylesheet" href="themes/dark/commandline.css">
+        <link rel="stylesheet" href="themes/greenmat/commandline.css">
     </head>
     <body>
         <div id="completions"></div>
