--- a/src/static/newtab.template.html
+++ b/src/static/newtab.template.html
@@ -2,10 +2,10 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="newtab.css">
-        <link rel="stylesheet" href="content.css">
-        <link rel="stylesheet" href="content-dark.css">
-        <link rel="stylesheet" href="hint.css">
-        <link rel="stylesheet" href="viewsource.css">
+        <link rel="stylesheet" href="themes/default/content.css">
+        <link rel="stylesheet" href="themes/dark/content.css">
+        <link rel="stylesheet" href="themes/default/hint.css">
+        <link rel="stylesheet" href="themes/default/viewsource.css">
         <link rel="shortcut icon" href="logo/Tridactyl_64px.png">
     </head>
     <title>Tridactyl Top Tips & New Tab Page</title>
